deploy/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins-ns
  labels:
    app.kubernetes.io/name: jenkins
